# worktrace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
worktrace/: __init__.py  _db.py  cli.py  query.py
