[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worktrace"
version = "0.1.0"
description = "Unified workflow memory for Python and the terminal"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
worktrace = "worktrace.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["worktrace*"]
